fix: add quality field in menu endpoint